--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 
-spring.datasource.url=jdbc:h2:mem:homework
+spring.datasource.url=jdbc:h2:mem:ibiniki
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -12,5 +12,5 @@ server.port=8080
 
 logging.level.org.springframework = info
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
