all entities are ready, time for routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 
-spring.datasource.url=jdbc:h2:mem:ibiniki
+spring.datasource.url=jdbc:h2:mem:homework1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
